day2-training/exercise/solution/deployment-fixed.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-store-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: e-commerce
  template:
    metadata:
      labels:
        app: e-commerce
    spec:
      containers:
        - name: web
          image: busybox:latest
          resources:
            limits:
              cpu: "200m"
              memory: "128Mi"
            requests:
              cpu: "100m"
              memory: "64Mi"
          command:
            - "/bin/sh"
            - "-c"
            - |
              if [ -z "$DB_PASSWORD" ]; then
                echo "FATAL: Database connection failed. DB_PASSWORD is missing!"
                exit 1
              fi
              echo "Connected to DB. Starting web server..."
              tail -f /dev/null
